# tradewinds

./: .gitignore  .gitmodules  CMakeLists.txt
scripts/: test_client.py  test_server.py  test_sub.py
src/: main.cpp  tradewinds.cpp  tradewinds.h
